[gd_scene load_steps=18 format=3 uid="uid://ckmae5mbchqu7"]

[ext_resource type="Texture2D" uid="uid://bw8xoe1bxro58" path="res://sprites/tileset.png" id="1_4y4kd"]
[ext_resource type="PackedScene" uid="uid://bff6f675uebmi" path="res://nodes/label.tscn" id="2_godww"]
[ext_resource type="PackedScene" uid="uid://bnccpkg8tqvj" path="res://nodes/player.tscn" id="2_iggk3"]
[ext_resource type="PackedScene" uid="uid://b8b6mvf1t3ufr" path="res://nodes/mob.tscn" id="3_0njbx"]
[ext_resource type="PackedScene" uid="uid://duqqi388cfs8f" path="res://nodes/enviroment.tscn" id="3_0v2jt"]
[ext_resource type="Script" path="res://scripts/state.gd" id="4_ho3ft"]
[ext_resource type="Texture2D" uid="uid://b27u060j47ilh" path="res://sprites/xpstatuia.png" id="5_wvlr7"]
[ext_resource type="PackedScene" uid="uid://hl5mg17c7i23" path="res://nodes/call_mob.tscn" id="6_kdv32"]
[ext_resource type="Script" path="res://scripts/reset.gd" id="6_q6lxg"]
[ext_resource type="Script" path="res://scripts/spawn_decor.gd" id="8_0ffbo"]
[ext_resource type="Texture2D" uid="uid://dt2oh8d87fgpg" path="res://sprites/coin.png" id="8_rj7mp"]
[ext_resource type="Texture2D" uid="uid://u0y1hn2kbadw" path="res://sprites/dummy.png" id="9_es3ky"]
[ext_resource type="Script" path="res://scripts/abilitys.gd" id="12_3umo4"]
[ext_resource type="PackedScene" uid="uid://cxyuaeb1t6kig" path="res://nodes/trap.tscn" id="13_iruxy"]
[ext_resource type="Script" path="res://scripts/spawner.gd" id="13_nk852"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3embe"]
texture = ExtResource("1_4y4kd")
1:0/0 = 0
1:0/0/custom_data_0 = true
2:0/0 = 0
2:0/0/custom_data_0 = true
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
0:2/0/custom_data_0 = true
1:2/0 = 0
1:2/0/custom_data_0 = true
2:2/0 = 0
2:2/0/custom_data_0 = true
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
0:3/0/custom_data_0 = true
1:3/0 = 0
1:3/0/custom_data_0 = true
2:3/0 = 0
2:3/0/custom_data_0 = true
3:3/0 = 0
3:3/0/custom_data_0 = true
4:3/0 = 0
4:3/0/custom_data_0 = true
0:4/0 = 0
1:4/0 = 0
1:4/0/probability = 0.25
2:4/0 = 0
3:4/0 = 0
3:4/0/probability = 0.25
4:4/0 = 0
4:4/0/probability = 0.25
0:0/0 = 0
0:0/0/custom_data_0 = true
0:5/0 = 0
0:5/0/probability = 0.25
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:0/0 = 0
5:0/0/custom_data_0 = true
5:1/0 = 0
5:1/0/custom_data_0 = true
5:2/0 = 0
5:2/0/custom_data_0 = true
5:3/0 = 0
5:3/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_iakwy"]
resource_local_to_scene = true
custom_data_layer_0/name = "walk"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_3embe")

[node name="game_tile" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource("TileSet_iakwy")
format = 2
layer_0/tile_data = PackedInt32Array(1, 0, 4, 2, 196608, 4, 3, 0, 5, 4, 196608, 4, 5, 131072, 5, 6, 196608, 5, 7, 0, 5, 8, 262144, 4, 9, 65536, 4, 0, 131072, 1, 524288, 131072, 1, 524297, 65536, 2, 589833, 0, 2, 65544, 131072, 3, 589824, 131072, 1, 65537, 131072, 2, 589825, 0, 2, 589826, 65536, 2, 589827, 0, 2, 589828, 65536, 2, 589829, 0, 2, 589830, 65536, 2, 589831, 0, 2, 589832, 65536, 2, 65538, 131072, 3, 65539, 131072, 2, 65540, 131072, 3, 65541, 131072, 2, 65542, 131072, 3, 65543, 131072, 2, 458761, 65536, 3, 393225, 65536, 2, 327689, 65536, 3, 262153, 65536, 2, 196617, 65536, 3, 131081, 65536, 2, 65545, 131072, 2, 65536, 131072, 1, 131072, 131072, 1, 196608, 0, 1, 262144, 0, 1, 327680, 131072, 1, 393216, 131072, 1, 458752, 131072, 1, 524289, 65536, 2, 524290, 0, 2, 524291, 65536, 2, 524292, 0, 2, 524293, 65536, 2, 524295, 65536, 2, 524296, 0, 2, 131073, 65536, 2, 131074, 0, 2, 131075, 65536, 2, 131076, 0, 2, 131077, 65536, 2, 131078, 0, 2, 131079, 65536, 2, 131080, 0, 2, 196610, 0, 3, 196611, 65536, 3, 196612, 0, 3, 196613, 65536, 3, 196614, 0, 3, 196615, 65536, 3, 262145, 65536, 2, 262146, 0, 2, 262147, 65536, 2, 262148, 0, 2, 262149, 65536, 2, 262150, 0, 2, 262151, 65536, 2, 262152, 0, 2, 327682, 0, 3, 327683, 65536, 3, 327684, 0, 3, 327685, 65536, 3, 327686, 0, 3, 327687, 65536, 3, 393217, 65536, 2, 393218, 0, 2, 393219, 65536, 2, 393220, 0, 2, 393221, 65536, 2, 393222, 0, 2, 393223, 65536, 2, 393224, 0, 2, 458754, 0, 3, 458755, 65536, 3, 458756, 0, 3, 458757, 65536, 3, 458759, 65536, 3, 196616, 0, 3, 327688, 0, 3, 458760, 0, 3, 458753, 65536, 3, 327681, 65536, 3, 196609, 65536, 3, -131072, 65536, 1, -131071, 65536, 1, -131070, 65536, 1, -131069, 65536, 1, -131068, 65536, 1, -131067, 65536, 1, -131066, 65536, 1, -131065, 65536, 1, -131064, 65536, 1, -131063, 65536, 1, 655360, 196608, 2, 655369, 65536, 1, -65537, 65536, 1, -131062, 65536, 1, -65526, 65536, 1, 10, 131072, 4, 65546, 131072, 3, 131082, 0, 2, 196618, 0, 3, 262154, 0, 2, 327690, 0, 3, 393226, 0, 2, 458762, 0, 3, 524298, 0, 2, 655359, 196608, 3, 589823, 262144, 0, 524287, 65536, 1, 458751, 0, 0, 393215, 0, 0, 327679, 0, 0, 262143, 0, 0, 196607, 0, 0, 131071, 0, 0, 65535, 65536, 0, -1, 262144, 0, -65536, 196608, 1, 720895, 196608, 3, 655370, 65536, 1, -65527, 65536, 1, -65535, 65536, 1, -65534, 65536, 1, -65533, 65536, 1, -65532, 65536, 1, -65531, 0, 1, -65530, 0, 1, -65529, 65536, 1, -65528, 65536, 1, 655361, 65536, 1, 655362, 65536, 1, 655363, 65536, 1, 655364, 65536, 1, 655365, 0, 1, 655366, 0, 1, 655367, 65536, 1, 655368, 65536, 1, 524294, 0, 2, 458758, 0, 3, -131061, 65536, 1, -65525, 262144, 1, 11, 131072, 1, 65547, 131072, 1, 131083, 131072, 1, 196619, 0, 1, 262155, 0, 1, 327691, 131072, 1, 393227, 131072, 1, 458763, 131072, 1, 524299, 131072, 1, 589835, 131072, 1, 655371, 262144, 2, -131060, 65536, 1, -65524, 262144, 0, 12, 65536, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 65536, 1, 524300, 262144, 0, 589836, 196608, 3, 655372, 196608, 3, -131059, 65536, 1, -65523, 262144, 0, 13, 65536, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 65536, 1, 524301, 262144, 0, 589837, 196608, 3, 655373, 196608, 3, -131058, 65536, 1, -65522, 262144, 0, 14, 65536, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 65536, 1, 524302, 262144, 0, 589838, 196608, 3, 655374, 196608, 3, -131057, 65536, 1, -65521, 262144, 0, 15, 65536, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 65536, 1, 524303, 262144, 0, 589839, 196608, 3, 655375, 196608, 3, -131056, 65536, 1, -65520, 262144, 0, 16, 65536, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 65536, 1, 524304, 262144, 0, 589840, 196608, 3, 655376, 196608, 3, -65542, 65536, 1, -6, 262144, 0, 65530, 65536, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 393210, 0, 0, 458746, 0, 0, 524282, 65536, 1, 589818, 262144, 0, 655354, 196608, 3, 720890, 196608, 3, -65541, 65536, 1, -5, 262144, 0, 65531, 65536, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, 393211, 0, 0, 458747, 0, 0, 524283, 65536, 1, 589819, 262144, 0, 655355, 196608, 3, 720891, 196608, 3, -65540, 65536, 1, -4, 262144, 0, 65532, 65536, 0, 131068, 0, 0, 196604, 0, 0, 262140, 0, 0, 327676, 0, 0, 393212, 0, 0, 458748, 0, 0, 524284, 65536, 1, 589820, 262144, 0, 655356, 196608, 3, 720892, 196608, 3, -65539, 65536, 1, -3, 262144, 0, 65533, 65536, 0, 131069, 0, 0, 196605, 0, 0, 262141, 0, 0, 327677, 0, 0, 393213, 0, 0, 458749, 0, 0, 524285, 65536, 1, 589821, 262144, 0, 655357, 196608, 3, 720893, 196608, 3, -65538, 65536, 1, -2, 262144, 0, 65534, 65536, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 65536, 1, 589822, 262144, 0, 655358, 196608, 3, 720894, 196608, 3, 720898, 65536, 4, 720899, 262144, 4, 720900, 262144, 4, 720901, 131072, 5, 720902, 196608, 5, 720903, 196608, 4, 786434, 196608, 3, 786435, 196608, 3, 786436, 196608, 3, 786437, 196608, 3, 786438, 196608, 3, 786439, 196608, 3, 851974, 196608, 3, 851973, 196608, 3, 851975, 196608, 3, 851972, 196608, 3, 851971, 196608, 3, 851970, 196608, 3, 786433, 196608, 3, 786440, 196608, 3, 720905, 262144, 4, 720904, 65536, 4, 720897, 196608, 4, 720896, 0, 4, 786432, 196608, 3, 851969, 196608, 3, 851976, 196608, 3, 786441, 196608, 3, 851977, 196608, 3, 720906, 65536, 4, 786442, 196608, 3, 720907, 131072, 4, 589834, 65536, 2, 786431, 196608, 3, 720908, 196608, 3, 786443, 196608, 3, 851978, 196608, 3, 917505, 196608, 3, 917506, 196608, 3, 917507, 196608, 3, 917508, 196608, 3, 917509, 196608, 3, 917510, 196608, 3, 917511, 196608, 3, 917512, 196608, 3, 917513, 196608, 3, 917514, 196608, 3, 851979, 196608, 3, 786444, 196608, 3, 851968, 196608, 3, 851967, 196608, 3, 786430, 196608, 3, 786429, 196608, 3, 786428, 196608, 3, 786427, 196608, 3, 786426, 196608, 3, 720909, 196608, 3, 720910, 196608, 3, 720911, 196608, 3, 720912, 196608, 3, 720913, 196608, 3, 655377, 196608, 3, 589841, 196608, 3, 524305, 262144, 0, 458769, 65536, 1, 393233, 0, 0, 327697, 0, 0, 262161, 0, 0, 196625, 0, 0, 131089, 0, 0, 65553, 0, 0, 17, 65536, 0, -65519, 262144, 0, -131055, 65536, 1)

[node name="game" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(16, 16)

[node name="spawn_decor" type="Node2D" parent="game"]
script = ExtResource("8_0ffbo")
enviroment = ExtResource("3_0v2jt")

[node name="player" parent="game" instance=ExtResource("2_iggk3")]
position = Vector2(72, 136)

[node name="call_mob" type="Node2D" parent="game"]
y_sort_enabled = true

[node name="call_mob" parent="game/call_mob" instance=ExtResource("6_kdv32")]
position = Vector2(187, -1)

[node name="call_mob2" parent="game/call_mob" instance=ExtResource("6_kdv32")]
position = Vector2(259, -2.99999)

[node name="call_mob3" parent="game/call_mob" instance=ExtResource("6_kdv32")]
position = Vector2(201, -1)

[node name="call_mob4" parent="game/call_mob" instance=ExtResource("6_kdv32")]
position = Vector2(218, -3)

[node name="call_mob5" parent="game/call_mob" instance=ExtResource("6_kdv32")]
position = Vector2(237, -3)

[node name="state" type="Node2D" parent="."]
position = Vector2(16, 16)
script = ExtResource("4_ho3ft")

[node name="Coin" type="Sprite2D" parent="state"]
position = Vector2(-104, 72)
texture = ExtResource("8_rj7mp")

[node name="coin" type="Label" parent="state/Coin"]
offset_left = 8.0
offset_top = -11.0
offset_right = 48.0
offset_bottom = 12.0
text = "0"

[node name="Xpstatuia" type="Sprite2D" parent="state"]
position = Vector2(-104, 8)
texture = ExtResource("5_wvlr7")

[node name="xp" type="Label" parent="state/Xpstatuia"]
offset_left = 9.0
offset_top = -12.0
offset_right = 49.0
offset_bottom = 14.0
text = "0"

[node name="Dummy" type="Sprite2D" parent="state"]
position = Vector2(-104, 40)
texture = ExtResource("9_es3ky")

[node name="wave" type="Label" parent="state/Dummy"]
offset_left = 9.0
offset_top = -12.0
offset_right = 49.0
offset_bottom = 14.0
text = "0
"

[node name="label" parent="." instance=ExtResource("2_godww")]
position = Vector2(33, 100)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(96, 87)
zoom = Vector2(3, 3.1)

[node name="restart" type="CharacterBody2D" parent="."]
position = Vector2(94, -92)
scale = Vector2(0.5, 0.5)
script = ExtResource("6_q6lxg")

[node name="Panel" type="Panel" parent="restart"]
offset_left = -55.0
offset_top = -57.0
offset_right = 54.0
offset_bottom = 56.0

[node name="resum" type="Button" parent="restart"]
offset_left = -38.0
offset_top = -52.0
offset_right = 37.0
offset_bottom = -21.0
text = "resum"

[node name="quit" type="Button" parent="restart"]
offset_left = -38.0
offset_top = 20.0
offset_right = 38.0
offset_bottom = 51.0
text = "quit"

[node name="menu" type="Button" parent="restart"]
offset_left = -38.0
offset_top = -16.0
offset_right = 38.0
offset_bottom = 15.0
text = "menu"

[node name="abilitys" type="Node2D" parent="."]
script = ExtResource("12_3umo4")
trap = ExtResource("13_iruxy")

[node name="trap" type="Node2D" parent="abilitys"]

[node name="Panel" type="Panel" parent="abilitys/trap"]
offset_left = 199.0
offset_top = 32.0
offset_right = 231.0
offset_bottom = 64.0

[node name="trap" type="Button" parent="abilitys/trap"]
offset_left = 244.0
offset_top = 52.0
offset_right = 272.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="abilitys/trap"]
offset_left = 239.0
offset_top = 30.0
offset_right = 279.0
offset_bottom = 56.0
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="abilitys"]
offset_left = 200.0
offset_top = 71.0
offset_right = 232.0
offset_bottom = 103.0

[node name="Button" type="Button" parent="abilitys"]
offset_left = 244.0
offset_top = 92.0
offset_right = 272.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="abilitys"]
offset_left = 238.0
offset_top = 70.0
offset_right = 278.0
offset_bottom = 93.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="spawner" type="Node2D" parent="."]
script = ExtResource("13_nk852")
mob = ExtResource("3_0njbx")

[connection signal="pressed" from="restart/resum" to="restart" method="_on_resum_pressed"]
[connection signal="pressed" from="restart/quit" to="restart" method="_on_quit_pressed"]
[connection signal="pressed" from="restart/menu" to="restart" method="_on_menu_pressed"]
[connection signal="pressed" from="abilitys/trap/trap" to="abilitys" method="_on_trap_pressed"]
